Fix header sizes, improve scalability on mobile

--- a/src/styles/sections/about/about.scss
+++ b/src/styles/sections/about/about.scss
@@ -1,5 +1,5 @@
 $about-section-padding-top: 80px;
-$about-section-padding-bottom: 100px;
+$about-section-padding-bottom: 80px;
 
 #o-nas {
     @import "partials/header";
