--- a/src/styles/sections/about/partials/_description.scss
+++ b/src/styles/sections/about/partials/_description.scss
@@ -4,7 +4,7 @@ $about-description-md-width: 6;
 $about-description-lg-width: 5;
 $about-description-font-family: Lato-Light;
 $about-description-font-size: 1.3em;
-$about-description-font-size-on-mobile: 4.5vw;
+$about-description-font-size-on-mobile: 1.2em;
 
 .about {
     display: block;
