--- a/src/styles/sections/contact/partials/_contacts.scss
+++ b/src/styles/sections/contact/partials/_contacts.scss
@@ -93,5 +93,18 @@ $contact-section-item-transform-on-click: 0.95;
         &:active {
             transform: scale($contact-section-item-transform-on-click);
         }
+
+        @media (max-width: 550px) {
+            margin: $contact-section-item-margin - 5px;
+            
+            .contact {
+                width: $contact-section-item-size - 10px;
+                height: $contact-section-item-size - 10px;
+            }
+
+            .tooltip {
+                display: none;
+            }
+        }
     }
 }
