--- a/src/styles/sections/contact/partials/_header.scss
+++ b/src/styles/sections/contact/partials/_header.scss
@@ -1,7 +1,7 @@
 $contact-header-color: white;
 $contact-header-font-family: Lato-Regular;
 $contact-header-font-size: 2.6em;
-$contact-header-font-size-on-mobile: 8vw;
+$contact-header-font-size-on-mobile: 2.2em;
 $contact-margin-beetwen-header-and-description: 25px;
 
 .section-header {
