--- a/src/styles/sections/contact/partials/_info.scss
+++ b/src/styles/sections/contact/partials/_info.scss
@@ -5,7 +5,7 @@ $contact-info-lg-width: 5;
 $contact-info-font-family: Lato-Light;
 $contact-info-font-color: white;
 $contact-info-font-size: 1.3em;
-$contact-info-font-size-on-mobile: 4.5vw;
+$contact-info-font-size-on-mobile: 1.2em;
 $contact-margin-beetwen-info-and-buttons: 25px;
 
 .contact-info {
