--- a/src/styles/sections/realizations/partials/_header.scss
+++ b/src/styles/sections/realizations/partials/_header.scss
@@ -1,7 +1,7 @@
 $realizations-header-color: #4b2778;
 $realizations-header-font-family: Lato-Regular;
 $realizations-header-font-size: 2.6em;
-$realizations-header-font-size-on-mobile: 7vw;
+$realizations-header-font-size-on-mobile: 2.2em;
 $realizations-margin-beetwen-header-and-subtitle: 5px;
 
 .section-header {
