--- a/src/styles/sections/realizations/realizations.scss
+++ b/src/styles/sections/realizations/realizations.scss
@@ -14,5 +14,9 @@
         padding-left: 0;
 
         @import "partials/realization";
+        
+        @media (max-width: 550px) {
+            width: 90%;
+        }
     }
 }
