--- a/src/styles/sections/services/partials/_header.scss
+++ b/src/styles/sections/services/partials/_header.scss
@@ -1,7 +1,7 @@
 $services-header-color: white;
 $services-header-font-family: Lato-Regular;
 $services-header-font-size: 2.6em;
-$services-header-font-size-on-mobile: 7vw;
+$services-header-font-size-on-mobile: 2.2em;
 $services-margin-beetwen-header-and-services: 60px;
 
 .section-header {
